[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
name = "tidy-data"
version = "0.1.0"

authors = ["Alexander Hess <alexander@webartifex.biz>"]
description = "A Python implementation for Hadley Wickham's Tidy Data paper"
keywords = [
    "data-cleaning",
    "data-science",
    "messy-data",
    "python",
    "tidy-data",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

# Data Science Tools
jupyterlab = "^2.2.6"
matplotlib = "^3.3.1"
numpy = "^1.19.1"
pandas = "^1.1.1"
seaborn = "^0.10.1"
sklearn = "^0.0"

# Interfaces to other tools
rpy2 = "==2.8.*"  # R support
savreaderwriter = "^3.4.2"  # IBM SPSS support

# Code Formatters
black = "^19.10b0"
nb_black = "^1.0.7"
